user changes